
Version 1.0.1 (r17) released March 9, 2012

    - Fix bug where `-s' flag did not function (Issue #1)
    - Document '%0$' specifier in man page

Version 1.0 (r4) released November 30, 2010

    - Initial release

$Id$