@@ -73,9 +73,11 @@ reads from standard input.
 Ignore the very first CSV record in the input (typically contains column names).
 .It Fl q
 Specify an alternate CSV column quote character.
+The usual backslash escape sequences are accepted.
 The default quote character is double quote.
 .It Fl s
 Specify an alternate CSV column separator character.
+The usual backslash escape sequences are accepted.
 The default separator character is comma.
 .It Fl h
 Output usage message and exit.
